# llmdoc

./: .gitignore  Cargo.toml  README.md  cargo_check.json
docs/: COMPREHENSIVE_USER_GUIDE.md  PROJECT_EVOLUTION_PIPELINE.md  README.md  USE_CASES_AND_EXAMPLES.md
schemas/: adr.json  component.json  sprint.json  task.json  user_story.json
src/: app_config.rs  lib.rs  logging.rs  main.rs  utils.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: db_cmds.rs  export_cmd.rs  import_cmd.rs  init_cmd.rs  migrate_cmd.rs  mod.rs  search_cmds.rs  sprint_cmds.rs  task_cmds.rs  watch_cmd.rs
src/core/: database.rs  errors.rs  mod.rs  models.rs  validation.rs
src/core/models/: adr.rs  component.rs  mod.rs  sprint.rs  task.rs  user_story.rs  validation.rs
src/embeddings/: http_provider.rs  mod.rs
src/export/: mod.rs
src/logging/: file_writer.rs  logger.rs  mod.rs
src/migration/: adrs.rs  components.rs  mod.rs  sprints.rs  tasks.rs  user_stories.rs
src/services/: adr_service.rs  component_service.rs  export_service.rs  mod.rs  search_service.rs  sprint_service.rs  task_service.rs  user_story_service.rs
templates/: LLMDOCS_GUIDE.md
